samples/_failures_safe/1761378080_32437e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5744535.c: In function ‘main’:
./samples/SAFE/__tmp_e5744535.c:120:5: error: expected declaration or statement at end of input
  120 |     printf("\nOriginal data (%d bytes):\n", input_size);
      |     ^~~~~~
